# pdf_contents_extractor

./: .gitignore  main.py  pyproject.toml
docs/: 使用指南.md
extractor/: page_mapper.py  pdf_reader.py  toc_locator.py  toc_page_parser.py  toc_writer.py
tests/: test_e2e.py
